fixed image on mobile devices? #10

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ h2 {
 
 #landing-main {
 	display: flex;
+	line-height: 2em;
 }
 
 
